[package]
name = "lispy-rs"
version = "0.0.2"
authors = ["Rostyslav Khudolii <rostyslav@airtame.com>"]
edition = "2018"

[dependencies]
rustyline = "6.1.0"
pest = "2.1.3"
pest_derive = "2.1.0"
log = "0.4.8"
env_logger = "0.7.1"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "lispy"
harness = false
